--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-    "latex-workshop.latex.outputDir": "./tex-output",
     "latex-workshop.latex.tools": [
         {
             "name": "latexmk",
@@ -43,5 +42,6 @@
         "Sweta",
         "YRBSS"
     ],
-    "latex-workshop.latex.outDir": "./tex-output"
+    "latex-workshop.latex.outDir": "./tex-output",
+    "python.pythonPath": "/Users/rjnieves/pythonenv/CAP6640_PROJ/bin/python"
 }
