Refactor Marc's code into `preproc` package
Logic from the `Tokenization` directory re-factored into a Python
package for use by other software. Tested `translate_file()` on data
set. Successfully produced transformed file suitable for deriving
n-grams.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,5 +48,6 @@
         "posteriori"
     ],
     "latex-workshop.latex.outDir": "./tex-output",
-    "python.pythonPath": "/Users/rjnieves/pythonenv/CAP6640_PROJ/bin/python"
+    "python.venvPath": "~/pythonenv",
+    "python.pythonPath": "~/pythonenv/CAP6640_PROJ/bin/python"
 }
