Add skeleton code for feature representation
Add some skeleton code that sketches out a design proposal outlining how
the system would pre-process the raw output, and then transform said
pre-processed output into a feature vector representation. Feature
vector representation in the skeleton code contains a placeholder line
returning a numpy array filled with zeroes, assuming a set of 500 unique
n-grams. Skeleton code placeholders must be replaced with real n-gram
logic.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,9 @@
         "Shelopugin",
         "Sweta",
         "YRBSS",
+        "hstack",
+        "ngram",
+        "numpy",
         "posteriori"
     ],
     "latex-workshop.latex.outDir": "./tex-output",
