Fix problem with tweets that reduce to empty
Some tweets after preprocessing reduced to nothing. Using pandas
`dropna()` during translation to prevent such entries from making it to
the pre-processed file.
Also added instrumentation to the n-gram encoding logic.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,7 @@
         "Shelopugin",
         "Sweta",
         "YRBSS",
+        "dropna",
         "hstack",
         "ngram",
         "numpy",
