--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,8 @@
         "hstack",
         "ngram",
         "numpy",
-        "posteriori"
+        "posteriori",
+        "sklearn"
     ],
     "latex-workshop.latex.outDir": "./tex-output",
     "python.venvPath": "~/pythonenv",
