All information incorporated into report
SVM information is in. Also revised the high/low chart using GnuPlot
instead of Excel.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
         "Sweta",
         "YRBSS",
         "dropna",
+        "embeddings",
         "hstack",
         "ngram",
         "numpy",
